--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,2 @@
 assets/3d[[:space:]]model/model.glb filter=lfs diff=lfs merge=lfs -text
+assets/3d[[:space:]]model/buffer.bin filter=lfs diff=lfs merge=lfs -text
